<resources>
    <string name="app_name">Line up</string>
    <string name="ButtonLogin">Login</string>
    <string name="RegisterLink">Create account</string>
    <string name="PasswordLink">Password </string>
    <string name="RetypePasswordLink">Confirm Password </string>
    <string name="FirstNameLink">Name </string>
    <string name="NameLink">Username </string>
    <string name="NextPage">Next Page</string>
    <string name="headingModeSelectPage">Queue Lover or Queue Hater?</string>
    <string name="EmailAddress_registerPage">Email Address</string>
    <string name="name_registerPage">First Name </string>
    <string name="password_registerPage">Password </string>
    <string name="passwordRetype_registerPage">Retype password </string>
    <string name="createAccountButton_registerPage">Create Account</string>
    <string name="Tutorial">Tutorial</string>
    <string name="QueueStatisticsTutorial">Queue Statistics</string>
    <string name="MessengerSystemTutorial">Messenger system</string>
    <string name="HelpIntro">Hello there! Welcome to LineUp! A Queue management application. Press view tutorial video to view an introductory video or press view documentation to view category specific documents.</string>
    <string name="LinkVideoTutorial">View video tutorial</string>
    <string name="LinkCategorySpecificTutorial">View Documentation</string>
    <string name="LinkUserProfile">User Profile</string>
    <string name="UserName">Username</string>
    <string name="Description">Description</string>
    <string name="UserProfileButtonDescription">The user profile button that will allow the user to change the profile picture. </string>
    <string name="UserDetails">User Description</string>
    <string name="LinkToSettingsActivity">Settings</string>
    <string name="LinkToEditProfileActivity">Edit Profile</string>
    <string name="Settings">Settings</string>
    <string name="QueueName">Queue Name</string>
    <string name="QueueDescriptionLabel">Queue Description</string>
    <string name="QueueWaitingTimeLabel">Average Waiting Time</string>
    <string name="QueueLengthLabel">Average Length</string>
    <string name="QueueKeyInfoLabel">Additional Information</string>
    <string name="SelectQueueLover">Select Queue Lover</string>
    <string name="QueueLoverName">Queue Lover Name</string>
    <string name="ViewQueueLoversLabel">Available Queue Lovers</string>
    <string name="SettingsFieldA">Setting Field A</string>
    <string name="SettingsFieldB">Setting Field B</string>
    <string name="SettingsFieldC">Setting Field C</string>
    <string name="SettingsFieldD">Setting Field D</string>
    <string name="SettingsFieldE">Setting Field E</string>
    <string name="SettingsFieldF">Setting Field F</string>
    <string name="SettingsFieldG">Setting Field G</string>
    <string name="SettingsFieldH">Setting Field H</string>
    <string name="SettingsFieldI">Setting Field I</string>
    <string name="SettingsFieldJ">Setting Field J</string>
    <string name="queuelover">Queue Lover</string>
    <string name="FindQueueLover">Find Queue Lovers</string>
    <string name="queuehater">Queue hater</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="help">Help</string>
    <string name="pick_booking_card">Pick Booking Card</string>
    <string name="bookingcard">Booking Cards</string>
    <string name="bookcard">Book for this card</string>
    <string name="placename">Place name</string>
    <string name="description">Description of the booking card goes here</string>
    <string name="bookingcarddescription">Booking Card Description</string>
    <string name="placeimage">Place image</string>
    <string name="helpcontent">Queue haters are individuals who are looking to avoid standing within a queue</string>
    <string name="queue_haters">Queue Haters</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="availableQueueLover">Available Queue Lovers</string>
    <string name="queueLoverDescription">Queue Lover Description</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="Settings_Display_Location">Location</string>
    <string name="Settings_Display_Queue_Lover_Distance">Display Users within: </string>
    <string name="Settings_Display_Distance">1KM</string>
    <string name="Settings_User_location">Current Location</string>
    <string name="Setting_Notifications">Notifications</string>
    <string name="Settings_Match_Notification">Matched Users</string>
    <string name="Settings_Queue_Notification">Queue Updates</string>
    <string name="Settings_Application_Rating">Application Rating</string>
    <string name="Settings_Contact_Us">Contact us</string>
    <string name="Settings_Legal">Legal</string>
    <string name="Settings_Logout">Logout</string>
    <string name="Settings_DeleteAccount">Delete Account</string>
    <string name="QueueLoverDescription">Queue Lovers can make money through standing in queues on other peoples behalf. Simply make yourself available to begin.</string>
    <string name="MakeAvailableQueueLover">Make Available</string>
    <string name="QueueInialize">Create Queue</string>
    <string name="QueueInializeName">Queue Name</string>
    <string name="QueueInializeDescription">Queue Description</string>
    <string name="QueueInializeLength">Queue Length</string>
    <string name="QueueInializeNoPeople">Number people</string>
    <string name="QueueInializeAdditionalInfo">Additional Information</string>
    <string name="QueueDistanceTextInialize">100m</string>
    <string name="QueueNumberPeopleTextInialize">10</string>
    <string name="title_activity_offline__notify">Offline_Notify</string>
    <string name="UserOfflineTextHeading">No internet connection</string>
    <string name="UserOfflineText">Check your internet connection and try again</string>
    <string name="UserOfflineButton">Refresh</string>
    <string name="LimitedFunctionHeading">One or more features have been disabled</string>
    <string name="LimitedFunctionTexts">Queue statistics will not be available. Enable functionality to receive alerts</string>
    <string name="LimitedFunctionButton">Refresh</string>
    <string name="TestPedometerText">Footstep Test</string>
    <string name="queue_statistics_notification_title_template">Queue statistics: %1$s</string>
    <string name="queue_statistics_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="line_up_layout_notification_title_template">Line up layout: %1$s</string>
    <string name="line_up_layout_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="title_activity_notification_worker">NotificationWorker</string>
    <string name="matchUserTitle">Find Person</string>
    <string name="Logo">Logo</string>
    <string name="NotificationString">Notifications</string>
    <string name="NotificationTitle">Title</string>
    <string name="NotificationMessage">Message</string>
    <string name="NotificationSend">Send Notification</string>
    <string name="Matches">Matches</string>
    <string name="title_activity_user_match">user_match</string>
    <string name="total">Total:</string>
    <string name="reactivate">Re-activate your account</string>
    <string name="reactivate_account">Account Reactivation</string>
    <string name="update_details">Update Details</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="useremailaddress_lineup_com">useremailaddress@LineUp.com</string>
    <string name="profile_image">navigation drawer profile image</string>
    <string name="user_details">User Details</string>
    <string name="enter_user_id">Enter user id</string>
    <string name="id">id</string>
    <string name="bookings">Bookings</string>
    <string name="textview">TextView</string>
    <string name="address">Address:</string>
    <string name="date">Date:</string>
</resources>