<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".matching">


    <TextView
        android:id="@+id/work"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="114dp"
        android:text="@string/textview" />

    <Button
        android:id="@+id/matchButton"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/brownGreen"

        android:text="@string/user_details"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/UserDetails"
        android:layout_width="168dp"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:ems="10"
        android:hint="@string/enter_user_id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/bookingDetails"
        android:layout_width="205dp"
        android:layout_height="109dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bookings"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/bookings" />

</RelativeLayout>