<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_User_Details"
    android:verticalScrollbarPosition="right"
    android:background="@drawable/blackback"
    android:orientation="vertical">

    <!--   <ImageView
           android:id="@+id/imageView3"
           android:layout_width="match_parent"
           android:layout_height="84dp"
           android:layout_weight="1.00"
           app:srcCompat="@mipmap/ic_launcher"
           android:padding="15sp"
           />
   -->
    <TextView
        android:id="@+id/UpdateText"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/update_details"
        android:paddingLeft="20sp"

        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/nameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/FirstNameLink"
        android:textColorHint="@color/white"
        android:paddingLeft="20sp"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="gravity"

        />

    <EditText
        android:id="@+id/UserNameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/UserName"
        android:textColorHint="@color/white"
        android:paddingLeft="20sp"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="gravity"

        />

    <EditText
        android:id="@+id/UserEmailAddressUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/EmailAddress_registerPage"
        android:textColorHint="@color/white"
        android:paddingLeft="20sp"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="gravity"

        />

    <EditText
        android:id="@+id/UserPasswordUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_registerPage"
        android:textColorHint="@color/white"
        android:paddingLeft="20sp"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="gravity"

        />

    <EditText
        android:id="@+id/UserPasswordUpdateRetype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/RetypePasswordLink"
        android:textColorHint="@color/white"
        android:paddingLeft="20sp"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="gravity"
        />

    <Button
        android:id="@+id/btn_update_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/update"
        android:textAllCaps="false"
        android:layout_marginTop="47dp"
        android:background="@color/yellow"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textAlignment="gravity"

        />

</LinearLayout>
