<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="196dp"
    android:background="@color/Gray"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    >

    <ImageView
        android:id="@+id/navProfilePicture"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:contentDescription="@string/profile_image" />


    <TextView
        android:id="@+id/TextViewUsername"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#fff"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="@font/electrolize"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="@string/useremailaddress_lineup_com"
        android:fontFamily="@font/questrial"/>

</LinearLayout>