<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackback"
    android:orientation="vertical"
    android:padding="16sp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.minzint.a4queue.NotificationWorker"
    tools:showIn="@layout/activity_notification_worker">


    <GridLayout
        android:id="@+id/notificationGridlayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/notificationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NotificationTitle"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="" />

        <EditText
            android:id="@+id/notificationMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NotificationMessage"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="" />

        <Button
            android:id="@+id/NotificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotificationSend"
            android:textColor="@color/black" />
    </GridLayout>

</LinearLayout>
