<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100sp"
    android:layout_marginEnd="5sp"
    android:layout_marginStart="5sp"
    android:layout_marginLeft="5sp"
    android:layout_marginRight="5sp"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        app:srcCompat="@drawable/cenceptimage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:padding="5sp">

        <TextView
            android:id="@+id/textViewAddressReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginLeft="70sp"
            android:layout_marginStart="70sp"
            android:layout_marginBottom="10sp"
            android:textSize="15sp"
            android:fontFamily="@font/questrial"/>

        <TextView
            android:id="@+id/textViewTotalReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginLeft="70sp"
            android:layout_marginStart="70sp"
            android:layout_marginBottom="10sp"
            android:textSize="15sp"
            android:fontFamily="@font/questrial"/>

        <TextView
            android:id="@+id/textViewDateReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginLeft="70sp"
            android:layout_marginStart="70sp"
            android:layout_marginBottom="10sp"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:fontFamily="@font/questrial"/>

    </LinearLayout>

</android.support.v7.widget.CardView>